# show-scraper

./: .Dockerignore  .flake8  .gitignore  Dockerfile  Makefile  Pipfile  README.md  Vagrantfile  _scraper.py  config.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  scraper.py
models/: __init__.py  config.py  episode.py  fireside.py  misc.py  person.py  sponsor.py
scraper/: main.py
scraper/models/: __init__.py  episode.py  models.py  person.py  sponsor.py  yaml_basemodel.py
scraper/utils/: __init__.py  http.py  string_utils.py
scripts/: format.sh  generate-guests-symlinks.sh  lint.sh
templates/: episode.md.j2
tests/: test_get_plain_title.py  test_get_username_from_url.py
