[tool.poetry]
name = "show-scraper"
version = "2.0.0"
description = "Show scraper for new JupiterBroadcasting.com website based on Hugo"
authors = ["Kiro Bondarev <kiro@bondarev.io>"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
PyYAML = "^6.0.0"
pydantic = "^1.9.1"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
lxml = "^4.9.1"
typer = {extras = ["all"], version = "^0.6.1"}
aiohttp = "^3.8.1"
aiodns = "^3.0.0"
cchardet = "^2.1.7"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
types-beautifulsoup4 = "^4.11.1"
types-PyYAML = "^6.0.11"
black = "^22.6.0"
types-requests = "^2.28.7"
autoflake = "^1.4"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.isort]
profile = "black"
